Update and rename alberqun.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="line-height: 1.3em;color:white;font-family: 'Press Start 2P', cursive;background-color:#826062; display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
     <div class="count" style="position: fixed; top:10%"></div>
     <div class="text" style="z-index: 10; ">Попробуй поймать Бобра</div>
-    <a class="again" href='/alberqun.html' style='color: white; margin-top: 10px;'></a>
+    <a class="again" href='/' style='color: white; margin-top: 10px;'></a>
     <img class="status"></img>
 
     <img class="beaver" style="position:absolute;width:  300px" src="https://i.pinimg.com/originals/4c/1e/c7/4c1ec7869fb663049b3e327dee1faed3.png"></img>
